<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="8dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/languageLayoutSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/spinner_dialog"
                    android:padding="5dp">

                    <Spinner
                        android:id="@+id/languageSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/claim_date"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/claimDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="@string/sample_name"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/from_district"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/from_district"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/claim_date"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/to_district"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/from_district"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/to_city"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/mode_of_travel"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/claim_date"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/class_of_travel"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/claim_date"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/kms"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/rate"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/remark"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp"
                    android:text="@string/expenses"
                    android:textColor="@color/grey_path"
                    android:textSize="15sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="@string/add_claim_item"
                    android:textColor="@color/white"
                    android:background="@drawable/button_background" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/claimRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </LinearLayout>


</layout>